html/assets/css/main.css
/* ... */
::-moz-placeholder {
  color: inherit;
  opacity: 0.5;
}

:-ms-input-placeholder {
  color: inherit;
  opacity: 0.5;
}

.image {
  border: 0;
  display: inline-block;
  position: relative;
}

.image:after {
  -moz-transition: opacity 0.25s ease-in-out;
  -webkit-transition: opacity 0.25s ease-in-out;
  -ms-transition: opacity 0.25s ease-in-out;
  transition: opacity 0.25s ease-in-out;
  background-image: url("images/overlay.png");
  content: '';
  display: block;
  height: 100%;
  left: 0;
  opacity: 0.2;
  position: absolute;
  top: 0;
  width: 100%;
}

.image img {
  display: block;
}

.image.feature img {
  display: block;
  width: 100%;
}

.image.icon {
  -moz-perspective: 500px;
  -webkit-perspective: 500px;
  -ms-perspective: 500px;
  perspective: 500px;
}

.image.icon:before {
  -moz-transition: -moz-transform 0.1s ease-in-out, font-size 0.1s ease-in-out;
  -webkit-transition: -webkit-transform 0.1s ease-in-out, font-size 0.1s ease-in-out;
  -ms-transition: -ms-transform 0.1s ease-in-out, font-size 0.1s ease-in-out;
  transition: transform 0.1s ease-in-out, font-size 0.1s ease-in-out;
  color: #fff;
  font-size: 6em;
  height: 1em;
  left: 50%;
  line-height: 1em;
  margin: -0.5em 0 0 -0.5em;
  position: absolute;
  text-align: center;
  top: 50%;
  width: 1em;
  z-index: 1;
}
span.image.icon {
  cursor: default;
}

.icon {
  text-decoration: none;
  border-bottom: none;
  position: relative;
}

.icon:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  text-transform: none !important;
}

.icon > .label {
  display: none;
}

ul.icons {
  cursor: default;
}

ul.icons li {
  display: inline-block;
  font-size: 1.25em;
  line-height: 1em;
  padding-left: 0.5em;
}

ul.icons li:first-child {
  padding-left: 0;
}

ul.icons li a, ul.icons li span {
  -moz-transition: background-color 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out;
  -ms-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  border-radius: 100%;
  border: solid 1px rgba(224, 224, 224, 0.75);
  display: inline-block;
  height: 2em;
  line-height: 2em;
  text-align: center;
  width: 2em;
}

ul.icons li a:hover, ul.icons li span:hover {
  background: rgba(224, 224, 224, 0.15);
}

input[type="submit"],
.button {
  -moz-appearance: none;
  -webkit-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
  -webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
  -ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
  background: #544d55;
  border-radius: 4px;
  border: 0;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-size: 0.9em;
  font-weight: 700;
  letter-spacing: 0.125em;
  line-height: 3.25em;
  min-width: 15em;
  padding: 0 1.5em;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}
.week-group { 
  font-size: 4px;
  border-radius: 6px;
  display:inline-block;
  border: 1px solid white;
  overflow:hidden;
}
#station li {
  margin: 0.15em;
}
.week-group li, .radio-group li{ 
  display: inline-block;
}
#day, #duration {
  display: block;
}
.week-group a {
  padding: 0;
  width: 100%;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.week-group li {
  font-size: 14px;
  width: 14%;
}
#duration li {
  width: 21%;
}
.radio-group .button {
  font-size: 14px;
  min-width: 6em;
  padding: 0 0.75em;
}
#donate { 
  display: inline-block;
}
.active-list {
  text-align: center
}
.active-list .button {
  line-height: 1.5em;
  padding: 0.5em;
  min-width: 6em;
  font-size:18px;
  margin: 0 0.5em;
  font-weight: normal; 
  margin-top: 0
}
.week-group .button {
  border-radius: 0;
  min-width: 2em;
}
    
input[type="submit"]:hover,
.button:hover {
  background: #6e6570;
}
.selected:hover,
.selected {
  color: #544d55;
  background: #D0D3CE; 
}

input[type="submit"]:active,
.button:active {
  background: #474148;
}

input[type="submit"].alt,
.button.alt {
  background: none;
  box-shadow: inset 0 0 0 1px rgba(224, 224, 224, 0.75);
  color: #544d55;
}

input[type="text"].error {
  border-color: red;
}

input[type="submit"].alt:hover,
.button.alt:hover {
  background: rgba(224, 224, 224, 0.15);
}

input[type="submit"].alt:active,
.button.alt:active {
  background: rgba(224, 224, 224, 0.35);
}

input[type="submit"].fit,
.button.fit {
  width: 100%;
}

input[type="submit"].small,
.button.small {
  font-size: 0.8em;
}

.box {
  background: #ffffff;
  border: solid 1px rgba(224, 224, 224, 0.75);
  margin-bottom: 6em;
  padding: 3.5em;
}

.box.alt {
  background: none;
  border: none;
  padding: 0;
}

.feature {
  position: relative;
  height: 20em;
}

.feature:after {
  clear: both;
  content: '';
  display: block;
}

.feature h3, .feature h4, .feature h5, .feature h6 {
  text-align: inherit;
}

.feature .image {
  display: inline-block;
  height: 100%;
  overflow: hidden;
  position: relative;
  width: 50%;
}

.feature .image img {
  display: block;
  min-height: 100%;
  min-width: 100%;
  position: absolute;
}

.feature:before {
  background: blue;
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.feature .content {
  display: inline-block;
  padding: 3.5em;
  vertical-align: middle;
  width: 48%;
}

.feature .content h3 {
  margin-bottom: 0.5em;
}

.feature .content :last-child {
  margin: 0;
}

.feature.left {
  text-align: left;
}

.feature.left .image {
  float: left;
}

.feature.left .image img {
  right: 0;
  top: 0;
}

.feature.left .content {
  padding-right: 0;
}

.feature.right {
  text-align: right;
}

.feature.right .image {
  float: right;
}
/* ... */

